# camp2026-turtle-game

./: .gitignore  Makefile  README.md  compose.dokploy.yml  compose.yml
backend/: .env.example  .gitignore  Cargo.toml  skills-lock.json
backend/src/: auth.rs  challenge_set_zip.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
backend/src/routes/: admin_challenges.rs  admin_submissions.rs  admin_teams.rs  auth.rs  blackboard.rs  challenges.rs  game.rs  health.rs  mod.rs  scores.rs  submissions.rs
backend/tests/: auth_teams.rs  blackboard.rs  challenge_sets.rs  game_flow.rs  health.rs  persistence.rs  submissions_scores.rs
deploy/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: .env.example  .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/admin/: AdminFloatingTimer.tsx  AdminPrimitives.tsx  AdminSubmissionPreview.tsx
frontend/src/components/turtle/: ChallengeRenderer.tsx  TurtleCanvas.tsx  TurtlePreviewPanel.tsx  index.ts
frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  input.tsx  label.tsx  select.tsx  sheet.tsx  (+5 more)
frontend/src/hooks/: use-blackboard-stream-viewer.ts  use-game-events.ts  use-mobile.ts  use-student-events.ts  use-team-screen-stream.ts
frontend/src/lib/: login-code.ts
frontend/src/routes/: BlackboardPage.tsx  HomePage.tsx
scripts/: demo-playthrough.mjs
(+42 files in other folders)
